test/error/ast/SetFromLongSet.mod
MODULE SetFromLongSet;
VAR ls: LONGSET; s: SET;
BEGIN
  ls := {1, 32};
  s := ls;
END SetFromLongSet.
